# cripto-sinais-app

./: .gitignore  .replit  Dockerfile  Procfile  README.md  advanced_pump_detector.py  app.py  app_api.py  app_mini.py  app_simple.py  app_simples.py  codemagic.yaml  config.py  crypto_price_bot.py  generate_short_url.py  google-services.json  index.js  index.py  main.py  main_simple.py  minimal_app.py  models.py  package.json  preview_server.py  pump_detector.py  pyproject.toml  run.sh  short_url.json  simple_pump_detector.py  start_server.sh  test_api.py  test_telegram.py  wsgi.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-Crypto-Price-Monitor-titl-1746608656661.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content--1746631190164.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content--1746778601942.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content--1746778782406.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1746630400516.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1746691612612.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1746692131380.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1746698264455.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1746779982730.txt  (+42 more)
flutter_app/: README.md  (+2 more)
(+82 files in other folders)
